try to fix z on mobile

--- a/syngenome.css
+++ b/syngenome.css
@@ -7,6 +7,7 @@ html, body {
 body {
     font-family: "Roboto Mono", monospace;
     background-color: #f9f6ee;
+    z-index: 1;
 }
 
 a {
